--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html lang="en">
+<head> 
+<meta charset="UTF-8">
+<title> 
+TechCon 2024 conference
+</title>
+</head>
 
+<body>
+<header>
+<nav> 
+<ul>
+<li><a href="index.html" > Home</li>
+<li><a href="about.html" > About </li>
+<li><a href="schedule.html" > Schedul</a> </li>
+<li><a href="register.html" > Register </a> </li>
+<li><a href="contact.html" > Contact </a> </li>
+</ul>
+</nav> 
+</header>
+<main> 
+
+<section>
+<p>
+TechCon® North America Training and Expo has a trusted history of providing industry experts to lead discussions on the technical development and solutions which improve key high voltage maintenance programs and asset management strategies for the aging electrical grid infrastructure. Since 1996, TechCon North America has been produced by TJ|H2b Analytical Services, a senior leader in the oil analysis industry.
+</p>
+<video controls width="700">
+    <source src="TechConGoingVirtual.mp4" type="video/mp4">
+<track src="TechCon.vtt" kind="captions" srclang="en" label="English">
+    Your browser does not support the video tag.
+</video>
+</section>
+
+
+
+</main>
+<footer>
+<p>Copyright &copy; TechCon 2024, All rights reserved.</p>
+</footer>
+</body>
+</html>
