--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -22,6 +22,7 @@ TechCon 2024 conference
 <main> 
 
 <section>
+    <h1>TechCon® North America</h1>
 <p>
 TechCon® North America Training and Expo has a trusted history of providing industry experts to lead discussions on the technical development and solutions which improve key high voltage maintenance programs and asset management strategies for the aging electrical grid infrastructure. Since 1996, TechCon North America has been produced by TJ|H2b Analytical Services, a senior leader in the oil analysis industry.
 </p>
