--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -38,7 +38,7 @@ TechCon 2024 conference
 </form>
 </main>
 <footer>
-<p>Copyright &copy; TechCon 2024, All rights reserved.</p>
+<p>"Copyright" &copy; TechCon 2024, All rights reserved.</p>
 </footer>
 </body>
 </html>
