--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -58,6 +58,6 @@ table, th, td {
 
 </body>
   <footer>
-<p>Copyright &copy; TechCon 2024, All rights reserved.</p>
+<p>"Copyright" &copy; TechCon 2024, All rights reserved.</p>
 </footer>
 </html>
