--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -56,7 +56,7 @@ table, th, td {
 </table>
 </main>
  <footer>
-<p>"Copyright" &copy; TechCon 2024, All rights reserved.</p>
+<p>Copyright &copy; TechCon 2024, All rights reserved.</p>
 </footer>
 </body>
  
