--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -20,7 +20,7 @@ TechCon 2024 conference
 </nav> 
 </header>
 <main> 
-<h2> Register </h2>
+<h1>Register for TechCon 2024</h1>
 <form> 
 <label for="name">Name:</label>
 <input type="text" name="name" placeholder="Name"> <br>
