--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -58,6 +58,7 @@ table, th, td {
  <footer>
 <p>Copyright &copy; TechCon 2024, All rights reserved.</p>
 </footer>
+  Copyright
 </body>
  
 </html>
