--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -56,9 +56,8 @@ table, th, td {
 </table>
 </main>
  <footer>
-<p>Copyright &copy; TechCon 2024, All rights reserved.</p>
+Copyright &copy; TechCon 2024, All rights reserved.
 </footer>
-  Copyright
 </body>
  
 </html>
